--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -159,8 +159,9 @@
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameSnece.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="PlayerHp.cpp" />
+    <ClCompile Include="PlayerStamina.cpp" />
+    <ClCompile Include="Player\Player.cpp" />
+    <ClCompile Include="Player\PlayerStatus\PlayerHp.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -170,8 +171,9 @@
   <ItemGroup>
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GameSnece.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="PlayerHp.h" />
+    <ClInclude Include="PlayerStamina.h" />
+    <ClInclude Include="Player\Player.h" />
+    <ClInclude Include="Player\PlayerStatus\PlayerHp.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
