--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -5,16 +5,18 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="GameCamera.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="PlayerHp.cpp" />
     <ClCompile Include="GameSnece.cpp" />
+    <ClCompile Include="Player\Player.cpp" />
+    <ClCompile Include="Player\PlayerStatus\PlayerHp.cpp" />
+    <ClCompile Include="PlayerStamina.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="GameCamera.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="PlayerHp.h" />
     <ClInclude Include="GameSnece.h" />
+    <ClInclude Include="Player\Player.h" />
+    <ClInclude Include="Player\PlayerStatus\PlayerHp.h" />
+    <ClInclude Include="PlayerStamina.h" />
   </ItemGroup>
 </Project>
