Revert "Merge branch 'master' of https://github.com/kazu-f/Maybe3DaysToDie"
This reverts commit 2a1f09f509e3bb3fe822d7f858dedf621b9f37e4, reversing
changes made to 641abc3cb0091ccf7e8ef9e69eff8d641153687d.

--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -11,10 +11,9 @@
     <ClCompile Include="Enemy\EnemyGenerator.cpp" />
     <ClCompile Include="Enemy\IEnemy.cpp" />
     <ClCompile Include="Enemy\StandardZombie.cpp" />
-
+    <ClCompile Include="PlacementObject\PlacementObject.cpp" />
     <ClCompile Include="Player\PlayerStatus\PlayerStamina.cpp" />
-    <ClCompile Include="Player\PlayerStatus\SpriteInitFunction.cpp" />   
- <ClCompile Include="PlacementObject\PlacementObject.cpp" />  </ItemGroup>
+  </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Stage.h" />
@@ -25,10 +24,9 @@
     <ClInclude Include="Enemy\EnemyGenerator.h" />
     <ClInclude Include="Enemy\IEnemy.h" />
     <ClInclude Include="Enemy\StandardZombie.h" />
-
     <ClInclude Include="PlacementObject\PlacementObject.h" />
     <ClInclude Include="Player\PlayerStatus\PlayerStamina.h" />
-    <ClInclude Include="Player\PlayerStatus\SpriteInitFunction.h" />  </ItemGroup>
+  </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\HPGauge.png" />
     <ImageContentTask Include="Assets\sprite\HPIcon.png" />
