--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="GameSnece.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PlacementObject\PlacementObject.cpp" />
+    <ClCompile Include="PlayerHunger.cpp" />
     <ClCompile Include="Player\PlayerStatus\PlayerStamina.cpp" />
     <ClCompile Include="Player\Player.cpp" />
     <ClCompile Include="Player\PlayerStatus\PlayerHp.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GameSnece.h" />
     <ClInclude Include="PlacementObject\PlacementObject.h" />
+    <ClInclude Include="PlayerHunger.h" />
     <ClInclude Include="Player\PlayerStatus\PlayerStamina.h" />
     <ClInclude Include="Player\Player.h" />
     <ClInclude Include="Player\PlayerStatus\PlayerHp.h" />
