経路探査系列追加。 ゾンビ処理追加。

--- a/Maybe3DaysToDie/MiniEngine/MiniEngine.vcxproj
+++ b/Maybe3DaysToDie/MiniEngine/MiniEngine.vcxproj
@@ -71,6 +71,9 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">MiniEngine.h</PrecompiledHeaderFile>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="NaviMesh\AStar.cpp" />
+    <ClCompile Include="NaviMesh\NaviMesh.cpp" />
+    <ClCompile Include="NaviMesh\NaviMeshAgent.cpp" />
     <ClCompile Include="physics\BoxCollider.cpp" />
     <ClCompile Include="physics\CapsuleCollider.cpp" />
     <ClCompile Include="physics\ICollider.cpp" />
@@ -130,6 +133,9 @@
     <ClInclude Include="level\MapChipRender.h" />
     <ClInclude Include="level\TklFile.h" />
     <ClInclude Include="MiniEngine.h" />
+    <ClInclude Include="NaviMesh\AStar.h" />
+    <ClInclude Include="NaviMesh\NaviMesh.h" />
+    <ClInclude Include="NaviMesh\NaviMeshAgent.h" />
     <ClInclude Include="physics\BoxCollider.h" />
     <ClInclude Include="physics\CapsuleCollider.h" />
     <ClInclude Include="physics\CollisionAttr.h" />
