--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -52,4 +52,7 @@
     <ImageContentTask Include="Assets\sprite\staminaGauge.png" />
     <ImageContentTask Include="Assets\sprite\statusGauge.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Assets\sprite\preset\fade.png" />
+  </ItemGroup>
 </Project>
