--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -183,7 +183,9 @@
     <ClCompile Include="Stage\SuperFlat\SuperFlat.cpp" />
     <ClCompile Include="Scene\TerrainDebugScene.cpp" />
     <ClCompile Include="TerrainManager\TerrainManager.cpp" />
-    <ClCompile Include="TerrainManager\TerrainRender.cpp" />
+    <ClCompile Include="TerrainManager\TerrainRender\TerrainRender.cpp" />
+    <ClCompile Include="TerrainManager\TerrainRender\TerrainMaterial.cpp" />
+    <ClCompile Include="TerrainManager\TerrainWorld.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DestructibleObject\DestructibleObject.h" />
@@ -209,7 +211,9 @@
     <ClInclude Include="Stage\SuperFlat\SuperFlat.h" />
     <ClInclude Include="Scene\TerrainDebugScene.h" />
     <ClInclude Include="TerrainManager\TerrainManager.h" />
-    <ClInclude Include="TerrainManager\TerrainRender.h" />
+    <ClInclude Include="TerrainManager\TerrainRender\TerrainRender.h" />
+    <ClInclude Include="TerrainManager\TerrainRender\TerrainMaterial.h" />
+    <ClInclude Include="TerrainManager\TerrainWorld.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\HPGauge.png" />
